[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/PNJ.gd" type="Script" id=1]
[ext_resource path="res://Images/Broken.png" type="Texture" id=2]
[ext_resource path="res://Images/Healed.png" type="Texture" id=3]
[ext_resource path="res://Images/Icons/TalkIcon.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 100, 100 )

[node name="Jeremie" type="KinematicBody2D" index="0"]

position = Vector2( 642, 354 )
input_pickable = false
collision_layer = 4
collision_mask = 0
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="BrokenSprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="HealedSprite" type="Sprite" parent="." index="2"]

visible = false
texture = ExtResource( 3 )
_sections_unfolded = [ "Visibility" ]

[node name="Area2D" type="Area2D" parent="." index="3"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 1, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -25.0
margin_top = -50.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Jérémie"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]
__meta__ = {
"_edit_lock_": true
}

[node name="TalkIcon" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( -94, -60 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]


